
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>in.drifted.planisphere</groupId>
    <artifactId>planisphere-core</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>planisphere-core</name>
    <url>http://drifted.in</url>

    <dependencies>
        <!-- milky way clipper (the Java port of GPC clipper) -->
        <!-- JTS Topology suite could be used as well -->
        <dependency>
            <groupId>math.geom2d</groupId>
            <artifactId>javaGeom</artifactId>
            <version>0.11.1</version>
        </dependency>        
        <!-- for correct detection and handling of CDATA (buttons in the screen mode) -->
        <!-- 5 times faster then Java default stax engine -->
        <dependency>
            <groupId>org.codehaus.woodstox</groupId>
            <artifactId>woodstox-core-lgpl</artifactId>
            <version>4.2.0</version>
        </dependency>
        <dependency>
            <groupId>in.drifted.util</groupId>
            <artifactId>svg-to-pdf-transcoder</artifactId>
            <version>1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>        
    </dependencies>
            
    <build>
        <finalName>planisphere-core</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>            
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
              
</project>
